<resources>
    <string name="app_name">Gestor de Demandas</string>
    <string name="nova_demanda">Nova Demanda</string>



    <string name="title_register">Cadastrar</string>
    <string name="title_list">Listar</string>
    <string name="name_gp">Nome do GP</string>
    <string name="number_of">N° da OF</string>
    <string name="title_of">Titulo da OF</string>
    <string name="responsible">Responsável</string>
    <string name="status">Status</string>
    <string name="deadline">Prazo</string>
    <string name="observation">Observação</string>

    <string name="name1">Trevisani</string>
    <string name="name2">Miguel</string>
    <string name="name3">Pedro</string>

    <string name="numberDemand">Numero Demanda</string>
    <string name="titleDemand">Titulo Demanda</string>
    <string name="statusDemand">Status Demanda</string>
    <string name="prazoDemand">Prazo Demanda</string>
    <string name="gp_cadaster">Gerente do projeto</string>


    <string name="desenvolvimento">Em desenvolvimento</string>
    <string name="impedimento">Em impedimento</string>
    <string name="homologacao">Em homologação</string>
    <string name="finalizada">Finalizada</string>
    <string name="demandas_cadastradas">Demandas Cadastradas</string>
    <string name="cadastradas">Cadastradas</string>

    <string name="list">Lista</string>
    <string name="grid">Grade</string>
    <string name="menu_save">Salvar</string>
    <string name="menu_cancel">Cancelar</string>


    <string-array name="status_demanda">

        <item>@string/desenvolvimento</item>
        <item>@string/impedimento</item>
        <item>@string/homologacao</item>
        <item>@string/finalizada</item>

    </string-array>


</resources>
