<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.jpadm.projetoinicial.views.TextActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    style="@style/layout_Style_text_view"
                    android:text="@string/name_gp"

                    />

                <Spinner
                    android:id="@+id/spinner_gp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"

                    ></Spinner>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    style="@style/layout_Style_text_view"
                    android:text="@string/number_of"

                    />

                <EditText style="@style/layout_Style_edit_text" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    style="@style/layout_Style_text_view"
                    android:text="@string/title_of" />

                <EditText style="@style/layout_Style_edit_text" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    style="@style/layout_Style_text_view"
                    android:text="@string/status" />

                <EditText style="@style/layout_Style_edit_text" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    style="@style/layout_Style_text_view"
                    android:text="@string/responsible" />

                <EditText

                    style="@style/layout_Style_edit_text" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    style="@style/layout_Style_text_view"
                    android:text="@string/deadline" />

                <EditText style="@style/layout_Style_edit_text" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    style="@style/layout_Style_text_view"
                    android:text="@string/observation"

                    />

                <EditText style="@style/layout_Style_edit_text" />


            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</LinearLayout>