<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:minHeight="?android:attr/listPreferredItemHeight">


        <TextView
            android:id="@+id/number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:singleLine="true"
            android:text="@string/numberDemand"
            android:gravity="center"
            android:textColor="@color/colorPrimary"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:orientation="vertical">


        <TextView
            android:id="@+id/title_of"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/titleDemand"
            android:gravity="center_vertical"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"  />

        <TextView
            android:id="@+id/status_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:gravity="center_vertical"
            android:text="@string/statusDemand"
            android:textColor="@color/colorAccent"/>

        </LinearLayout>

        <TextView
            android:id="@+id/prazo_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/prazoDemand"
            android:textColor="@color/colorPrimary"/>

    </LinearLayout>

</LinearLayout>
